--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
+    "axios": "^1.6.7",
+    "install": "^0.13.0",
+    "npm": "^10.4.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
     "react-native-web": "^0.19.10"
   },
   "devDependencies": {
